handling horrizontal scroll issue

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ H150.6z M132.4,21.2c1.1-4.2,4.9-7.4,9.4-7.4c4.5,0,8.4,3.1,9.4,7.4h15.4c-4.3-9.4-
         </div>
         <div class="work__process-svgs">
           <div class="surgery__work-process">
-            <svg class="surgery-svg" xmlns="http://www.w3.org/2000/svg" id="a"  viewBox="0 0 865.76 682.89">
+            <svg class="surgery-svg" xmlns="http://www.w3.org/2000/svg" width="450px" height="450px" id="a"  viewBox="0 0 865.76 682.89">
               <g>
                 <g>
                   <g>
@@ -730,7 +730,7 @@ H150.6z M132.4,21.2c1.1-4.2,4.9-7.4,9.4-7.4c4.5,0,8.4,3.1,9.4,7.4h15.4c-4.3-9.4-
            </div>
           </div>
           <div class="dental__work-process">
-            <svg class="dental-svg" xmlns="http://www.w3.org/2000/svg" id="a"  viewBox="0 0 865.76 682.89">
+            <svg class="dental-svg" xmlns="http://www.w3.org/2000/svg" width="450px" height="450px" id="a"  viewBox="0 0 865.76 682.89">
               <g>
                 <circle cx="321.5" cy="154.56" r="12" fill="#002346"></circle>
                 <path d="M321.5,167.06c-6.89,0-12.5-5.61-12.5-12.5s5.61-12.5,12.5-12.5,12.5,5.61,12.5,12.5-5.61,12.5-12.5,12.5Zm0-24c-6.34,0-11.5,5.16-11.5,11.5s5.16,11.5,11.5,11.5,11.5-5.16,11.5-11.5-5.16-11.5-11.5-11.5Z" fill="#0d2445"></path>
@@ -1155,7 +1155,7 @@ H150.6z M132.4,21.2c1.1-4.2,4.9-7.4,9.4-7.4c4.5,0,8.4,3.1,9.4,7.4h15.4c-4.3-9.4-
               </g>
             </svg>
            <div class="dental__work-process-content">
-            <h3 class="cosm__title"> dental implants</h3>
+            <h3 class="dental__title"> dental implants</h3>
             <p class="cosm__desc-1">Lorem ipsum dolor sit amet dolor sit ame</p>
             <p class="cosm__desc-2">Lorem ipsum dolor dolor sit ame </p>
             <p class="cosm__desc-3">Lorem ipsum dolor sit ame </p>
@@ -1163,7 +1163,7 @@ H150.6z M132.4,21.2c1.1-4.2,4.9-7.4,9.4-7.4c4.5,0,8.4,3.1,9.4,7.4h15.4c-4.3-9.4-
            </div>
           </div>
           <div class="neurology__work-process">
-          <svg class="neurology-svg" xmlns="http://www.w3.org/2000/svg" id="a"  viewBox="0 0 865.76 682.89">
+          <svg class="neurology-svg" xmlns="http://www.w3.org/2000/svg" width="450px" height="450px" id="a"  viewBox="0 0 865.76 682.89">
             <g>
               <g>
                 <g>
@@ -1412,7 +1412,7 @@ H150.6z M132.4,21.2c1.1-4.2,4.9-7.4,9.4-7.4c4.5,0,8.4,3.1,9.4,7.4h15.4c-4.3-9.4-
             </g>
           </svg>
          <div class="neurology__work-process-content">
-          <h3 class="cosm__title">cosmetic neurology</h3>
+          <h3 class="neurology__title">cosmetic neurology</h3>
           <p class="cosm__desc-1">Lorem ipsum dolor sit amet dolor sit ame</p>
           <p class="cosm__desc-2">Lorem ipsum dolor dolor sit ame </p>
           <p class="cosm__desc-3">Lorem ipsum dolor sit ame </p>
