--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@ H150.6z M132.4,21.2c1.1-4.2,4.9-7.4,9.4-7.4c4.5,0,8.4,3.1,9.4,7.4h15.4c-4.3-9.4-
               </g>
             </svg>
            <div class="dental__work-process-content">
-            <h3 class="dental__title"> dental implants</h3>
+            <h3 class="dental__title-work"> dental implants</h3>
             <p class="cosm__desc-1">Lorem ipsum dolor sit amet dolor sit ame</p>
             <p class="cosm__desc-2">Lorem ipsum dolor dolor sit ame </p>
             <p class="cosm__desc-3">Lorem ipsum dolor sit ame </p>
@@ -1412,7 +1412,7 @@ H150.6z M132.4,21.2c1.1-4.2,4.9-7.4,9.4-7.4c4.5,0,8.4,3.1,9.4,7.4h15.4c-4.3-9.4-
             </g>
           </svg>
          <div class="neurology__work-process-content">
-          <h3 class="neurology__title">cosmetic neurology</h3>
+          <h3 class="neurology__title-work">cosmetic neurology</h3>
           <p class="cosm__desc-1">Lorem ipsum dolor sit amet dolor sit ame</p>
           <p class="cosm__desc-2">Lorem ipsum dolor dolor sit ame </p>
           <p class="cosm__desc-3">Lorem ipsum dolor sit ame </p>
